--- a/Report.html
+++ b/Report.html
@@ -147,7 +147,7 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
-        /* Nút Report Lỗi (Primary/Blue) */
+        /* Nút Report Lỗi (Primary/Blue) - Giữ nguyên hiệu ứng đẹp */
         .send-btn { 
             color: var(--primary-dark); 
         }
@@ -159,7 +159,7 @@
                         0 0 0 4px rgba(0, 123, 255, 0.3);
         }
 
-        /* Nút Góp ý / Đề xuất (Success/Green) */
+        /* Nút Góp ý / Đề xuất (Success/Green) - Giữ nguyên hiệu ứng đẹp */
         .feedback-btn { 
             color: var(--success-dark);
         }
@@ -171,7 +171,7 @@
                         0 0 0 4px rgba(40, 167, 69, 0.3);
         }
 
-        /* Nút Quay lại (Neutral/Gray) */
+        /* Nút Quay lại (Neutral/Gray) - Giữ nguyên hiệu ứng đẹp */
         .back-btn { 
             color: var(--neutral-dark);
             font-weight: 500;
@@ -205,7 +205,6 @@
         }
         .toggle-btn:hover { 
             opacity: 0.9; 
-            transform: none;
         }
 
         /* 9. POPUP MODAL (Giữ nguyên) */
