--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         gtag('config', 'G-92KE83JEYM');
     </script>
     <meta charset="utf-8" />
-    <title>Bảng Thông Báo BTVN - 01/10/2025</title>
+    <title>Bảng Thông Báo BTVN - 02/10/2025</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <style>
         :root {
@@ -1743,7 +1743,7 @@
             <div class="popup-changelog">
                 <div class="changelog-header">
                     <span class="changelog-icon">📋</span>
-                    <span class="changelog-version">Changelog (V3.0.3)</span>
+                    <span class="changelog-version">Changelog (V3.0.4)</span>
                 </div>
 
                 <div class="changelog-content">
@@ -1753,10 +1753,11 @@
                             <span>Cập nhật môn học</span>
                         </div>
                         <ul class="change-list">
-                            <li class="change-item">Cập nhật Sinh học</li>
-                            <li class="change-item">Cập nhật Ngữ văn</li>
-                            <li class="change-item">Cập nhật Toán học - Hình học</li>
-                            <li class="change-item">Cập nhật Vật lý</li>
+                            <li class="change-item">Cập nhật Tiếng Anh</li>
+                            <li class="change-item">Cập nhật Âm nhạc</li>
+                            <li class="change-item">Cập nhật Toán học - Đại số</li>
+                            <li class="change-item">Cập nhật Tin học</li>
+                            <li calss="change-item">Cập nhật Lịch sử</li>
                         </ul>
                     </div>
 
@@ -1803,7 +1804,7 @@
     <div class="wrap">
         <!-- BTVN -->
         <div class="card liquid-effect">
-            <h1 class="fade-in-text">📢 Thông báo BTVN cho 02/10/2025</h1>
+            <h1 class="fade-in-text">📢 Thông báo BTVN cho 03/10/2025</h1>
             <h2 class="animate-item">📘 Địa lí</h2>
             <ul class="animate-item">
                 <li>Học thuộc hết tiết 5 bài 2</li>
@@ -1816,7 +1817,7 @@
                 <li>Ôn lại bài cũ</ul>
             <strong class="animate-item">Số:</strong>
             <ul class="animate-item">
-                <li>1.24 → 1.25, vận dụng, luyện tập 2 Sách toán tập 1 [SGK-20; 21]</li>
+                <li>1.26 → 1.29[SGK-21]</li>
             </ul>
             <h2 class="animate-item">✍ Ngữ văn</h2>
             <ul class="animate-item">
@@ -1833,7 +1834,7 @@
             <h2 class="animate-item">📜 Lịch sử</h2>
             <ul class="animate-item">
                 <li>Đọc trước bài chuẩn bị cho dự giờ</li>
-                <li>Trả lời câu hỏi cô đã hỏi hôm nay</li>
+                <li>Trả lời câu hỏi cô đã hỏi</li>
             </ul>
             <h2 class="animate-item">🔬 Vật lý</h2>
             <ul class="animate-item">
@@ -1842,7 +1843,7 @@
             <h2 class="animate-item">🤝 HĐTN, HN</h2>
             <ul class="animate-item">
                 <li>Hiện không có bài</li>
-                <li>Lưu ý nhỏ: Mang cả lịch sử</ul>
+            </ul>
             <h2 class="animate-item">🎨 Mĩ thuật</h2>
             <ul class="animate-item">
                 <li>Vẽ xong bài cô đã cho</li>
@@ -1853,7 +1854,10 @@
             </ul>
             <h2 class="animate-item">🇬🇧 Tiếng Anh(Global success)</h2>
             <ul class="animate-item">
-                <li>Viết 10 từ mơi mỗi từ hai 20 lần mỗi dòng hai từ(≈73)</li>
+                <li>Viết 15 từ mơi mỗi từ hai 20 lần mỗi dòng hai từ(≈86)</li>
+                <li>SBT: Làm unit 1 D2 và D3(SBT-8)</li>
+                <li>Làm EX: 5 (SHS-25)</li>
+                <li>SBT: Làm unit 2 A1 và cả phần B(SBT-11; 12; 13)</li>
             </ul>
             <h2 class="animate-item">👥 Công dân</h2>
             <ul class="animate-item">
@@ -1867,11 +1871,11 @@
             </ul>
             <h2 class="animate-item">🎶 Âm nhạc(Sách cánh diều)</h2>
             <ul class="animate-item">
-                <li>Học bài hát "Bản làng tươi đẹp"(SGK-13)</li>
+                <li>Kẻ hết bài "Khúc ca bốn mùa"(SCD-5; 6)</li>
             </ul>
             <h2 class="animate-item">💻 Tin học</h2>
             <ul class="animate-item">
-                <li>Học hết Phần 1 hoặc 2 bài 2(Chưa rõ)</li>
+                <li>Hiện tại không có bài!(Chưa rõ)</li>
             </ul>
             <div class="note animate-item">
                 <strong>LƯU Ý:</strong>
@@ -1887,10 +1891,11 @@
             <div class="changelog animate-item" style="margin-top:14px;">
                 <strong>Những môn học đã được thay đổi, câp nhật</strong>
                 <ul>
-                    <li>Cập nhật Ngữ văn</li>
-                    <li>Cập nhật Sinh học</li>
-                    <li>Cập nhật Toán học - Hình học</li>
-                    <li>Cập nhật Vật lý</li>
+                    <li>Cập nhật Tiếng Anh</li>
+                    <li>Cập nhật Âm nhạc</li>
+                    <li>Cập nhật Toán học - Đại số</li>
+                    <li>Cập nhật Tin học</li>
+                    <li>Cập nhật Lịch sử</li>
                 </ul>
             </div>
         </div>
@@ -1911,11 +1916,11 @@
 
         const TKB = {
             0: ["Chủ nhật: Nghỉ / Tự học"],
-            1: ["HĐTN,HN(Chào cờ)", "LS&ĐL - Lịch sử", "Tiếng anh", "LS&ĐL - Địa lí", "Toán học - Đại số"],
-            2: ["Ngữ văn", "Tiếng anh", "Công nghệ", "HĐTN,HN(Mang Lịch sử)", "Giáo dục thể chất"],
+            1: ["HĐTN,HN(Chào cờ)", "LS&ĐL - Lịch sử", "Tiếng Anh", "LS&ĐL - Địa lí", "Toán học - Đại số"],
+            2: ["Ngữ văn", "Tiếng Anh", "Công nghệ", "HĐTN,HN", "Giáo dục thể chất"],
             3: ["Ngữ văn", "Toán học - Hình học", "KHTN - Vật lý", "NT - Mĩ thuật", "KHTN - Sinh học"],
-            4: ["Toán học - Đại Số", "Tin học", "LS&ĐL - Lịch sử", "Âm nhạc", "Tiếng anh"],
-            5: ["Giáo dục địa phương", "Ngữ văn", "HĐTN,HN(Mang Lịch sử)", "Toán học - Hình học", "Giáo dục công dân"],
+            4: ["Toán học - Đại Số", "Tin học", "LS&ĐL - Lịch sử", "Âm nhạc", "Tiếng Anh"],
+            5: ["Giáo dục địa phương", "Ngữ văn", "HĐTN,HN", "Toán học - Hình học", "Giáo dục công dân"],
             6: ["KHTN - Sinh học", "Giáo dục thể chất", "Ngữ văn", "KHTN - Hóa học", "Nghỉ"]
         };
 
