--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         gtag('config', 'G-92KE83JEYM');
     </script>
     <meta charset="utf-8" />
-    <title>Bảng Thông Báo BTVN - 02/10/2025</title>
+    <title>Bảng Thông Báo BTVN - 03/10/2025</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <style>
         :root {
@@ -1743,7 +1743,7 @@
             <div class="popup-changelog">
                 <div class="changelog-header">
                     <span class="changelog-icon">📋</span>
-                    <span class="changelog-version">Changelog (V3.0.4)</span>
+                    <span class="changelog-version">Changelog (V3.0.5)</span>
                 </div>
 
                 <div class="changelog-content">
@@ -1753,11 +1753,9 @@
                             <span>Cập nhật môn học</span>
                         </div>
                         <ul class="change-list">
-                            <li class="change-item">Cập nhật Tiếng Anh</li>
-                            <li class="change-item">Cập nhật Âm nhạc</li>
-                            <li class="change-item">Cập nhật Toán học - Đại số</li>
-                            <li class="change-item">Cập nhật Tin học</li>
-                            <li calss="change-item">Cập nhật Lịch sử</li>
+                            <li class="change-item">Cập nhật Ngữ văn</li>
+                            <li class="change-item">Cập nhật GDCD</li>
+                            <li class="change-item">Cập nhật Toán học - Hình học</li>
                         </ul>
                     </div>
 
@@ -1813,7 +1811,7 @@
             <h2 class="animate-item">➗ Toán học</h2>
             <strong class="animate-item">Hình:</strong>
             <ul class="animate-item">
-                <li>Làm 3.13 → 3.16(SGK-61)</li>
+                <li>Làm luyện tập 2 và 3.17 → 3.18(SGK-60; 61)</li>
                 <li>Ôn lại bài cũ</ul>
             <strong class="animate-item">Số:</strong>
             <ul class="animate-item">
@@ -1821,11 +1819,11 @@
             </ul>
             <h2 class="animate-item">✍ Ngữ văn</h2>
             <ul class="animate-item">
-                <li>Đọc qua bài để trả lời tốt câu hỏi(không bắt buộc)</li>
+                <li>Viết kết nói với đọc SGK-41</li>
             </ul>
             <h2 class="animate-item">🧬 Sinh học</h2>
             <ul class="animate-item">
-                <li>Làm phần 3.Kết quả(Kẻ 2 bảng SGK-134)</li>
+                <li>Làm phần "3.Kết quả"(Kẻ 2 bảng SGK-134)</li>
             </ul>
             <h2 class="animate-item">🏠 GDĐP</h2>
             <ul class="animate-item">
@@ -1833,8 +1831,7 @@
             </ul>
             <h2 class="animate-item">📜 Lịch sử</h2>
             <ul class="animate-item">
-                <li>Đọc trước bài chuẩn bị cho dự giờ</li>
-                <li>Trả lời câu hỏi cô đã hỏi</li>
+                <li>Làm vận dụng 1 (SGK-26)</li>
             </ul>
             <h2 class="animate-item">🔬 Vật lý</h2>
             <ul class="animate-item">
@@ -1861,9 +1858,7 @@
             </ul>
             <h2 class="animate-item">👥 Công dân</h2>
             <ul class="animate-item">
-                <li>Làm vận dụng bài 1; 2(SGK-9)</li>
-                <li>Làm bài 1 đến 4 (SGK trang 8 và 9)[Nếu chưa làm xong]</li>
-                <li>Lưu ý nhỏ: Có thể sẽ chấm</li>
+                <li>Học hết phần màu vang SGK-14</li>
             </ul>
             <h2 class="animate-item">🔧 Công nghệ</h2>
             <ul class="animate-item">
@@ -1891,11 +1886,9 @@
             <div class="changelog animate-item" style="margin-top:14px;">
                 <strong>Những môn học đã được thay đổi, câp nhật</strong>
                 <ul>
-                    <li>Cập nhật Tiếng Anh</li>
-                    <li>Cập nhật Âm nhạc</li>
-                    <li>Cập nhật Toán học - Đại số</li>
-                    <li>Cập nhật Tin học</li>
-                    <li>Cập nhật Lịch sử</li>
+                    <li>Cập nhật Ngũ văn</li>
+                    <li>Cập nhật Toán học - Hình học</li>
+                    <li>Cập nhật GDCD</li>
                 </ul>
             </div>
         </div>
