--- a/admin.html
+++ b/admin.html
@@ -98,8 +98,9 @@
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby-w7uCCpBZadyJ1lSUoeFlKZlNcV0sGiAAn0hJJdpK06J2CQfzeIf2c72xRmqQbBOv/exec";
     const ADMIN_USERNAME = "admin";
-    const ADMIN_PASSWORD = "123456";
+    const ADMIN_PASSWORD = "~~!@#$%^&*()_+-=[]{}|;':",.<>?/`´¨•√π÷×¶∆£¢€¥₩₽°©®™✓✗∑∏∫∞∇Ω∂µφψδλθΞΣΓΦΨΩ∴∵";
   </script>
   <script src="admin.js"></script>
 </body>
+
 </html>
