--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-
+<script>
+  const isError = true;
+  if (isError) {
+    window.location.href = "bigerror.html";
+  }
+</script>
 <body>
     <div class="loading-screen" id="loadingScreen">
         <div class="loading-spinner"></div>
