--- a/Status.html
+++ b/Status.html
@@ -10,7 +10,7 @@
   <style>
     :root {
       --primary: #009966;
-      --primary-gradient: linear-gradient(90deg, #38d39f 30%, #38a6d3 100%);
+      --primary-gradient: linear-gradient(90deg, #38d34d 30%, #38a6d3 100%);
       --background: #f7fafc;
       --background-alt: #fff;
       --background-commit: linear-gradient(90deg, #e1f5fe 0%, #f9fbe7 100%);
@@ -26,7 +26,7 @@
       --commit-border: #38a6d3;
       --footer: #7ab;
       --link: #0083e8;
-      --ok-bg: linear-gradient(90deg, #38d39f 30%, #38a6d3 100%);
+      --ok-bg: linear-gradient(90deg, #09ff00 30%, #15f715 100%);
       --ok-shadow: 0 2px 8px #38d39f22;
       --scrollbar-bg: #eaf6fb;
       --scrollbar-thumb: #b2ebf2;
@@ -53,7 +53,7 @@
       --commit-border: #38d39f;
       --footer: #41b883;
       --link: #1ec0ff;
-      --ok-bg: linear-gradient(90deg, #38a6d3 30%, #38d39f 100%);
+      --ok-bg: linear-gradient(90deg, #09ff00 30%, #15f715 100%);
       --ok-shadow: 0 2px 8px #38a6d322;
       --scrollbar-bg: #22303a;
       --scrollbar-thumb: #38d39f;
@@ -538,7 +538,7 @@
     <div class="status-container">
       <span class="status-ok">
         <i class="fas fa-check-circle"></i>
-        Online
+        Offline
       </span>
     </div>
     
@@ -561,7 +561,7 @@
           <th><i class="fas fa-server"></i> Trạng thái repo:</th>
           <td>
             <span class="status-indicator status-online"></span>
-            Public, <span style="color: #28a745;">Đang hoạt động</span>
+            Public, <span style="color: #28a744;">Hệ thống lỗi</span>
           </td>
         </tr>
         <tr>
@@ -600,10 +600,10 @@
       <h2><i class="fas fa-history"></i> Cập nhật gần đây từ trang web chính</h2>
             
       <div class="commit-item">
-        <span class="msg">Sửa đổi lỗi hiển thị cập nhật sửa lỗi bảo mật chỉnh sửa dễ nhìn sửa lỗi vặt</span>
+        <span class="msg">Tăng tốc độ đọc viết</span>
           <div class="meta">
             <i class="fas fa-user"></i> by <b>DuyAnh662</b> &bull; 
-            <i class="fas fa-calendar-alt"></i> 2025-10-24 20:50 UTC+7 &bull; 
+            <i class="fas fa-calendar-alt"></i> 2025-11-11 15:20 UTC+7 &bull; 
             <i class="fas fa-code-branch"></i> main
           </div>
       </div>
