--- a/Status.html
+++ b/Status.html
@@ -600,14 +600,29 @@
       <h2><i class="fas fa-history"></i> Cập nhật gần đây từ trang web chính</h2>
             
       <div class="commit-item">
-        <span class="msg">Tăng tốc độ đọc viết</span>
+        <span class="msg">Sửa đổi giao diện</span>
           <div class="meta">
             <i class="fas fa-user"></i> by <b>DuyAnh662</b> &bull; 
-            <i class="fas fa-calendar-alt"></i> 2025-11-11 15:20 UTC+7 &bull; 
+            <i class="fas fa-calendar-alt"></i> 2025-11-19 15:30 UTC+7 &bull; 
             <i class="fas fa-code-branch"></i> main
           </div>
       </div>
-      
+      <div class="commit-item">
+        <span class="msg">Sửa lỗi linh tinh khác</span>
+          <div class="meta">
+            <i class="fas fa-user"></i> by <b>DuyAnh662</b> &bull; 
+            <i class="fas fa-calendar-alt"></i> 2025-11-19 15:30 UTC+7 &bull; 
+            <i class="fas fa-code-branch"></i> main
+          </div>
+      </div>
+      <div class="commit-item">
+        <span class="msg">Đã tối ưu hơn độ ổn định</span>
+          <div class="meta">
+            <i class="fas fa-user"></i> by <b>DuyAnh662</b> &bull; 
+            <i class="fas fa-calendar-alt"></i> 2025-11-19 15:30 UTC+7 &bull; 
+            <i class="fas fa-code-branch"></i> main
+          </div>
+      </div>
     </div>
     <div class="footer">
       <p>&copy; 2025 <a href="https://github.com/DuyAnh662" target="_blank">DuyAnh662</a> &mdash; Trang trạng thái tự động cập nhật thời gian thực.</p>
